feat: updating demo
Signed-off-by: Luis Mori Guerra <luismorith@gmail.com>

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,8 @@
     <script src="../dist/appelement/polyfills.js"></script>
     <script type="module" src="../dist/appelement/main.js"></script>
 
-    <wc-displayname [name]="myname$ | async">
+    <wc-displayname name="luis mori">
+      this is light dom content
     </wc-displayname>
   </body>
 </html>
